--- a/html/tiket.html
+++ b/html/tiket.html
@@ -4,6 +4,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pemesanan Tiket PT. Monyet Terbang</title>
+    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/animation.css">
+  <script src="js/script.js" defer></script>
+</head>
+<body>
+<header>
+  <nav><img src ="../assets/logo.png" alt="Logo" class="logo">
+    <div class="navtext">
+      <h2>PT Monyet Terbang</h2>
+      <h4>Armada Pelayaran Tepeng</h4>
+    </div></nav>
+  <nav>
+    <a href="../index.html">Beranda</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="infojadwal.html">Informasi Jadwal</a>
+    <a href="tiket.html">Pemesanan Tiket</a>
+    <a href="#footer">Hubungi Kami</a>
+  </nav>
+</header>
 
 <style>
     body {
