--- a/html/tiket.html
+++ b/html/tiket.html
@@ -398,5 +398,15 @@
     usia.addEventListener('change', updateHarga);
 </script>
 
+<br><br><br><br>
+</main>
+<footer id="footer">
+  <div class=kontak>
+  <h3>Hubungi kami di:</h3>
+    <div class="footertext"><img src="whatsapp.png">081181945</div>
+    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
+  </div>
+  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
+</footer>
 </body>
 </html>
