--- a/html/tiket.html
+++ b/html/tiket.html
@@ -24,7 +24,8 @@
     <a href="#footer">Hubungi Kami</a>
   </nav>
 </header>
-
+<main>
+<div class="banner"><h1>Layanan</h1></div>
 <style>
     body {
         font-family: Georgia, serif;
