--- a/html/tiket.html
+++ b/html/tiket.html
@@ -25,7 +25,7 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>Layanan</h1></div>
+<div class="banner"><h1>PEMESANAN TIKET KAPAL</h1></div>
 <style>
     body {
         font-family: Georgia, serif;
