--- a/html/tiket.html
+++ b/html/tiket.html
@@ -133,7 +133,6 @@
 
 <div class="container">
 
-    <!-- KIRI -->
     <div class="box">
         <h3>Registrasi Pengguna MT Ferry</h3>
 
@@ -197,9 +196,9 @@
             <label>Kapal</label>
             <select id="kapal">
                 <option>Pilih Kapal</option>
-                <option value="icon">Icon of the Seas</option>
-                <option value="star">Star Of The Seas</option>
-                <option value="utopia">Utopia Of The Seas</option>
+                <option value="icon">Padang Terbang</option>
+                <option value="star">Rendang Lemak</option>
+                <option value="utopia">Kentang Goreng</option>
             </select>
         </div>
 <label>Tanggal Keberangkatan</label>
