--- a/html/tiket.html
+++ b/html/tiket.html
@@ -196,9 +196,9 @@
             <label>Kapal</label>
             <select id="kapal">
                 <option>Pilih Kapal</option>
-                <option value="icon">Padang Terbang</option>
-                <option value="star">Rendang Lemak</option>
-                <option value="utopia">Kentang Goreng</option>
+                <option value="icon">Kapal PZE Terbang</option>
+                <option value="star">Kapal RZL Terbang</option>
+                <option value="utopia">Kapal KZG Terbang</option>
             </select>
         </div>
 <label>Tanggal Keberangkatan</label>
