--- a/html/galeri.html
+++ b/html/galeri.html
@@ -26,29 +26,29 @@
 </header>
 <main>
 <div class="banner"><h1>GALERI</h1></div>
-              <h3>MSC OREO</h3>
-            <p>Kapasitas Kargo: 24000 kontainer</p>
-            <p>Panjang: 400 meter</p>
-            <p>Lebar: 60 meter</p>
-        </div>
-    </div>
-    <h2>Trophi PT. Monyet Terbang</h2>
+                  <h2>Trophi PT. Monyet Terbang</h2>
     <div class="trophy-section">
-        <div class="trophies">
+        <div class="trophy-grid">
             <div class="trophy-card">
-                <img src="https://via.placeholder.com/300x130?text=Juara+Nasional+Ship+2025" alt="Juara Nasional Ship 2025">
-                <h4>Juara Nasional Ship 2025</h4>
-                <p>Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98% On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.</p>
+                <img src="https://via.placeholder.com/280x140?text=Juara+Nasional+Ship+2025" alt="Juara Nasional Ship 2025" />
+                <div class="trophy-caption">Juara Nasional Ship 2025</div>
+                <div class="trophy-description">
+                    Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98% On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.
+                </div>
             </div>
             <div class="trophy-card">
-                <img src="https://via.placeholder.com/300x130?text=The+Best+Ship" alt="The Best Ship">
-                <h4>The Best Ship</h4>
-                <p>MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.</p>
+                <img src="https://via.placeholder.com/280x140?text=The+Best+Ship" alt="The Best Ship" />
+                <div class="trophy-caption">The Best Ship</div>
+                <div class="trophy-description">
+                    MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.
+                </div>
             </div>
             <div class="trophy-card">
-                <img src="https://via.placeholder.com/300x130?text=Kapal+Gen-Z+%231" alt="Kapal Gen-Z #1">
-                <h4>Kapal Gen-Z #1</h4>
-                <p>Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.</p>
+                <img src="https://via.placeholder.com/280x140?text=Kapal+Gen-Z+%231" alt="Kapal Gen-Z #1" />
+                <div class="trophy-caption">Kapal Gen-Z #1</div>
+                <div class="trophy-description">
+                    Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.
+                </div>
             </div>
         </div>
     </div>
