--- a/html/galeri.html
+++ b/html/galeri.html
@@ -1,87 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Beranda</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/animation.css">
-  <script src="js/script.js" defer></script>
+<meta charset="UTF-8" />
+<title>Kapal PT. Monyet Terbang</title>
+<style>
+  body {
+    background-color: #f7f2e3;
+    font-family: Georgia, serif;
+    padding: 15px;
+  }
+  h1 {
+    font-size: 36px;
+    font-weight: normal;
+    margin-bottom: 10px;
+  }
+  h1 span {
+    text-decoration: underline;
+    text-decoration-color: red;
+    text-underline-offset: 5px;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 15px;
+  }
+  td {
+    vertical-align: top;
+    text-align: center;
+    padding: 8px 5px;
+  }
+  img {
+    border-radius: 10px;
+  }
+  .kelas {
+    font-weight: bold;
+    font-size: 16px;
+    text-decoration: underline solid red 2px;
+    margin-top: 20px;
+    margin-bottom: 8px;
+  }
+  .kelas table {
+    width: 100%;
+  }
+  .kelas td {
+    text-align: left;
+    padding: 4px 12px;
+    font-size: 14px;
+  }
+  .judul-trophy {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 35px;
+    margin-bottom: 12px;
+  }
+  .judul-trophy span {
+    text-decoration: underline;
+    text-decoration-color: red;
+    text-underline-offset: 4px;
+  }
+  .trophy {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  .trophy td {
+    width: 33%;
+    padding: 8px;
+    vertical-align: top;
+    text-align: center;
+  }
+  .trophy img {
+    width: 90%;
+    max-width: 290px;
+    height: auto;
+  }
+  .trophy h3 {
+    font-family: 'Comic Sans MS', cursive;
+    margin: 7px 0 5px 0;
+  }
+  .trophy p {
+    font-size: 13px;
+    text-align: justify;
+    margin: 3px 10px 0 10px;
+  }
+</style>
 </head>
 <body>
-<header>
-  <nav><img src ="../assets/logo.png" alt="Logo" class="logo">
-    <div class="navtext">
-      <h2>PT Monyet Terbang</h2>
-      <h4>Armada Pelayaran Tepeng</h4>
-    </div></nav>
-  <nav>
-    <a href="../index.html">Beranda</a>
-    <a href="layanan.html">Layanan</a>
-    <a href="galeri.html">Galeri</a>
-    <a href="infojadwal.html">Informasi Jadwal</a>
-    <a href="tiket.html">Pemesanan Tiket</a>
-    <a href="#footer">Hubungi Kami</a>
-  </nav>
-</header>
-<main>
-<div class="banner"><h1>GALERI</h1></div>
-                          <p>Economy : 4700 orang<br />
-           Business : 600 orang<br />
-           First-Class : 300 orang
-        </p>
-      </div>
-      <div>
-        <h3>MSC OREO</h3>
-        <p>Kapasitas Kargo : 24000 kontainer<br />
-           Panjang 400 meter<br />
-           Lebar 60 meter
-        </p>
-      </div>
-    </div>
-    
-    <!-- Trophi PT. Monyet Terbang -->
-    <h2>TROPHI PT. <span style="text-decoration: underline; text-decoration-color: red;">MONYET</span> TERBANG</h2>
-    <div class="bottom-images">
-      <div class="trophy-item">
-        <img src="../assets/sea.jpg" style="height:160px;width:280px;" alt="Juara Nasional Ship 2025" />
-        <h4>JUARA NASIONAL SHIP 2025</h4>
-        <p>
-          Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98%-On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.
-        </p>
-      </div>
-      <div class="trophy-item">
-        <img src="../assets/star.jpg" style="height:160px;width:280px;" alt="The Best Ship" />
-        <h4>THE BEST SHIP</h4>
-        <p>
-          MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.
-        </p>
-      </div>
-      <div class="trophy-item">
-        <img src="../assets/topia.jpg" style="height:160px;width:280px;" alt="Kapal Gen-Z #1" />
-        <h4>KAPAL GEN-Z #1</h4>
-        <p>
-          Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.
-        </p>
-      </div>
-    </div>
-  </div>
-<br><br><br><br>
-</main>
-<footer id="footer">
-  <hr style="border: 1.5px solid black; width: 80%; margin: 20px auto;">
-  <div style="text-align: center; background-color: #fdf7e9; padding: 10px 0;">
-    <h3 style="margin: 5px 0;">Hubungi kami di:</h3>
-    <div style="margin: 8px 0;">
-      <img src="whatsapp.png" alt="Nomor Telepon" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
-      <span>081181945</span>
-    </div>
-    <div style="margin: 8px 0;">
-      <img src="instagram.png" alt="Instagram" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
-      <span>@PTmonyet_terbang</span>
-    </div>
-    <p style="margin-top: 12px;">© 2025 PT Monyet Terbang. All rights reserved.</p>
-  </div>
-</footer>
+
+<h1>KAPAL PT. <span>MONYET</span> TERBANG</h1>
+
+<!-- Baris Gambar atas 4 gambar -->
+<table>
+  <tr>
+    <td><img src="../assets/sea.jpg" alt="PZE Terbang" style="height:165px; width:280px;"><br><strong>PZE TERBANG</strong></td>
+    <td><img src="../assets/star.jpg" alt="RZL Terbang" style="height:165px; width:280px;"><br><strong>RZL TERBANG</strong></td>
+    <td><img src="../assets/topia.jpg" alt="KZG Terbang" style="height:165px; width:280px;"><br><strong>KZG TERBANG</strong></td>
+    <td><img src="../assets/kargo.jpg" alt="MSC Oreo" style="height:165px; width:280px;"><br><strong>MSC OREO</strong></td>
+  </tr>
+</table>
+
+<!-- Tingkatan/Kelas Section -->
+<div class="kelas">
+  TINGKATAN/<span>KELAS</span>
+</div>
+
+<table>
+  <tr>
+    <td>
+      <strong>PZE TERBANG</strong><br>
+      Economy : 5900 orang<br>
+      Business : 800 orang<br>
+      First-Class : 300 orang
+    </td>
+    <td>
+      <strong>RZL TERBANG</strong><br>
+      Economy : 6400 orang<br>
+      Business : 900 orang<br>
+      First-Class : 300 orang
+    </td>
+    <td>
+      <strong>KZG TERBANG</strong><br>
+      Economy : 4700 orang<br>
+      Business : 600 orang<br>
+      First-Class : 300 orang
+    </td>
+    <td>
+      <strong>MSC OREO</strong><br>
+      Kapasitas Kargo : 24.000 kontainer<br>
+      Panjang 400 meter<br>
+      Lebar 60 meter
+    </td>
+  </tr>
+</table>
+
+<!-- Trophy Section -->
+<div class="judul-trophy">
+  TROPHI PT. <span>MONYET</span> TERBANG
+</div>
+
+<table class="trophy">
+  <tr>
+    <td>
+      <img src="../assets/sea.jpg" alt="Juara Nasional Ship 2025" >
+      <h3>JUARA NASIONAL SHIP 2025</h3>
+      <p>Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98%-On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.</p>
+    </td>
+    <td>
+      <img src="../assets/star.jpg" alt="The Best Ship" >
+      <h3>THE BEST SHIP</h3>
+      <p>MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.</p>
+    </td>
+    <td>
+      <img src="../assets/topia.jpg" alt="Kapal Gen-Z #1" >
+      <h3>KAPAL GEN-Z #1</h3>
+      <p>Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.</p>
+    </td>
+  </tr>
+</table>
+
 </body>
 </html>
