--- a/html/galeri.html
+++ b/html/galeri.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Beranda</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/animation.css">
+  <script src="js/script.js" defer></script>
+</head>
+<body>
+<header>
+  <nav><img src ="../assets/logo.png" alt="Logo" class="logo">
+    <div class="navtext">
+      <h2>PT Monyet Terbang</h2>
+      <h4>Armada Pelayaran Tepeng</h4>
+    </div></nav>
+  <nav>
+    <a href="../index.html">Beranda</a>
+    <a href="layanan.html">Layanan</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="infojadwal.html">Informasi Jadwal</a>
+    <a href="tiket.html">Pemesanan Tiket</a>
+    <a href="#footer">Hubungi Kami</a>
+  </nav>
+</header>
+<main>
+<div class="banner"><h1>GALERI</h1></div>
 <title>Kapal PT. Monyet Terbang</title>
 <style>
   body {
@@ -157,5 +181,22 @@
   </tr>
 </table>
 
+<br><br><br><br>
+</main>
+<footer id="footer">
+  <hr style="border: 1.5px solid black; width: 80%; margin: 20px auto;">
+  <div style="text-align: center; background-color: #fdf7e9; padding: 10px 0;">
+    <h3 style="margin: 5px 0;">Hubungi kami di:</h3>
+    <div style="margin: 8px 0;">
+      <img src="whatsapp.png" alt="Nomor Telepon" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
+      <span>081181945</span>
+    </div>
+    <div style="margin: 8px 0;">
+      <img src="instagram.png" alt="Instagram" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
+      <span>@PTmonyet_terbang</span>
+    </div>
+    <p style="margin-top: 12px;">© 2025 PT Monyet Terbang. All rights reserved.</p>
+  </div>
+</footer>
 </body>
 </html>
