--- a/html/galeri.html
+++ b/html/galeri.html
@@ -112,17 +112,15 @@
 
 <h1>KAPAL PT. <span>MONYET</span> TERBANG</h1>
 
-<!-- Baris Gambar atas 4 gambar -->
 <table>
   <tr>
-    <td><img src="../assets/sea.jpg" alt="PZE Terbang" style="height:165px; width:280px;"><br><strong>PZE TERBANG</strong></td>
-    <td><img src="../assets/star.jpg" alt="RZL Terbang" style="height:165px; width:280px;"><br><strong>RZL TERBANG</strong></td>
-    <td><img src="../assets/topia.jpg" alt="KZG Terbang" style="height:165px; width:280px;"><br><strong>KZG TERBANG</strong></td>
-    <td><img src="../assets/kargo.jpg" alt="MSC Oreo" style="height:165px; width:280px;"><br><strong>MSC OREO</strong></td>
+    <td><img src="/assets/sea.jpg" alt="PZE Terbang" style="height:165px; width:280px;"><br><strong>PZE TERBANG</strong></td>
+    <td><img src="/assets/star.jpg" alt="RZL Terbang" style="height:165px; width:280px;"><br><strong>RZL TERBANG</strong></td>
+    <td><img src="/assets/topia.jpg" alt="KZG Terbang" style="height:165px; width:280px;"><br><strong>KZG TERBANG</strong></td>
+    <td><img src="/assets/kargo.jpg" alt="MSC Oreo" style="height:165px; width:280px;"><br><strong>MSC OREO</strong></td>
   </tr>
 </table>
 
-<!-- Tingkatan/Kelas Section -->
 <div class="kelas">
   TINGKATAN/<span>KELAS</span>
 </div>
@@ -156,7 +154,6 @@
   </tr>
 </table>
 
-<!-- Trophy Section -->
 <div class="judul-trophy">
   TROPHI PT. <span>MONYET</span> TERBANG
 </div>
@@ -164,17 +161,17 @@
 <table class="trophy">
   <tr>
     <td>
-      <img src="../assets/sea.jpg" alt="Juara Nasional Ship 2025" >
+      <img src="/assets/sea.jpg" alt="Juara Nasional Ship 2025" >
       <h3>JUARA NASIONAL SHIP 2025</h3>
       <p>Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98%-On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.</p>
     </td>
     <td>
-      <img src="../assets/star.jpg" alt="The Best Ship" >
+      <img src="/assets/star.jpg" alt="The Best Ship" >
       <h3>THE BEST SHIP</h3>
       <p>MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.</p>
     </td>
     <td>
-      <img src="../assets/topia.jpg" alt="Kapal Gen-Z #1" >
+      <img src="/assets/topia.jpg" alt="Kapal Gen-Z #1" >
       <h3>KAPAL GEN-Z #1</h3>
       <p>Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.</p>
     </td>
