--- a/html/galeri.html
+++ b/html/galeri.html
@@ -114,10 +114,10 @@
 
 <table>
   <tr>
-    <td><img src="/..assets/sea.png" alt="PZE Terbang" style="height:165px; width:280px;"><br><strong>PZE TERBANG</strong></td>
-    <td><img src="/..assets/star.png" alt="RZL Terbang" style="height:165px; width:280px;"><br><strong>RZL TERBANG</strong></td>
-    <td><img src="/..assets/topia.png" alt="KZG Terbang" style="height:165px; width:280px;"><br><strong>KZG TERBANG</strong></td>
-    <td><img src="/..assets/kargo.png" alt="MSC Oreo" style="height:165px; width:280px;"><br><strong>MSC OREO</strong></td>
+    <img src="../assets/sea.png" alt="PZE Terbang" style="height:165px; width:280px;">
+    <img src="../assets/star.png" alt="RZL Terbang" style="height:165px; width:280px;">
+    <img src="../assets/topia.png" alt="KZG Terbang" style="height:165px; width:280px;">
+    <img src="../assets/kargo.png" alt="MSC Oreo" style="height:165px; width:280px;">
   </tr>
 </table>
 
