--- a/html/galeri.html
+++ b/html/galeri.html
@@ -116,7 +116,7 @@
   <tr>
     <img src="../assets/sea.png" alt="PZE Terbang" style="height:165px; width:280px;">
     <img src="../assets/star.png" alt="RZL Terbang" style="height:165px; width:280px;">
-    <img src="../assets/topia.png" alt="KZG Terbang" style="height:165px; width:280px;">
+    <img src="../assets/Utopia.jng" alt="KZG Terbang" style="height:165px; width:280px;">
     <img src="../assets/kargo.png" alt="MSC Oreo" style="height:165px; width:280px;">
   </tr>
 </table>
