--- a/html/galeri.html
+++ b/html/galeri.html
@@ -161,17 +161,17 @@
 <table class="trophy">
   <tr>
     <td>
-      <img src="/..assets/sea.png" alt="Juara Nasional Ship 2025" >
+      <img src="../assets/sea.png" alt="PZE Terbang" style="height:165px; width:280px;">
       <h3>JUARA NASIONAL SHIP 2025</h3>
       <p>Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98%-On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.</p>
     </td>
     <td>
-      <img src="/..assets/star.png" alt="The Best Ship" >
+      <img src="../assets/star.png" alt="RZL Terbang" style="height:165px; width:280px;">
       <h3>THE BEST SHIP</h3>
       <p>MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.</p>
     </td>
     <td>
-      <img src="/..assets/topia.png" alt="Kapal Gen-Z #1" >
+      <img src="../assets/topia.png" alt="KZG Terbang" style="height:165px; width:280px;">
       <h3>KAPAL GEN-Z #1</h3>
       <p>Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.</p>
     </td>
