--- a/html/galeri.html
+++ b/html/galeri.html
@@ -176,11 +176,11 @@
   <div style="text-align: center; background-color: #fdf7e9; padding: 10px 0;">
     <h3 style="margin: 5px 0;">Hubungi kami di:</h3>
     <div style="margin: 8px 0;">
-      <img src="whatsapp.png" alt="Nomor Telepon" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
+      <img src="../assets/whatsapp.png" alt="Nomor Telepon" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
       <span>081181945</span>
     </div>
     <div style="margin: 8px 0;">
-      <img src="instagram.png" alt="Instagram" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
+      <img src="../assets/instagram.png" alt="Instagram" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
       <span>@PTmonyet_terbang</span>
     </div>
     <p style="margin-top: 12px;">© 2025 PT Monyet Terbang. All rights reserved.</p>
